--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,143 +1,130 @@
-@import url( 'https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700');
 @import "reset";
 @import "variable";
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
-  background: $lightGrey;
+    font-family: 'Roboto', sans-serif;
+    background: $lightGrey;
 }
 
 #sideMenu {
-  background: $purpleLight;
-  max-width: 280px;
-  width: 280px;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-
-  nav {
-    padding-top: 100px;
-    a {
-      display:block;
-      color: $darkGrey;
-      text-decoration: none;
-      padding: 15px 30px;
-      font-weight: 300;
-      transition: all .3s ease-in-out;
-      &:hover {
-        background: $purpleDark;
-        padding: 15px 30px 15px 25px;
-        color: $neonGreen;
-        .fa {
-          color: $neonGreen;
+    background: $purpleLight;
+    max-width: 280px;
+    width: 280px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    nav {
+        padding-top: 100px;
+        a {
+            display: block;
+            color: $darkGrey;
+            text-decoration: none;
+            padding: 15px 30px;
+            font-weight: 300;
+            transition: all .3s ease-in-out;
+            &:hover {
+                background: $purpleDark;
+                padding: 15px 30px 15px 25px;
+                color: $neonGreen;
+                .fa {
+                    color: $neonGreen;
+                }
+            }
+            &.active {
+                background: $purpleDark;
+                color: $neonGreen;
+                border-left: 5px solid $neonGreen;
+                padding: 15px 30px 15px 25px;
+                .fa {
+                    color: $neonGreen;
+                }
+            }
+            .fa {
+                color: $darkGrey;
+                font-size: 1.4rem;
+                margin-right: 0.8rem;
+                display: inline-block;
+                width: 30px;
+                position: relative;
+                top: 2px;
+            }
         }
-      }
-
-      &.active {
-        background: $purpleDark;
-        color: $neonGreen;
-        border-left: 5px solid $neonGreen;
-        padding: 15px 30px 15px 25px;
-        .fa {
-          color: $neonGreen;
-        }
-      }
-
-      .fa {
-        color: $darkGrey;
-        font-size: 1.4rem;
-        margin-right: 0.8rem;
-        display: inline-block;
-        width: 30px;
-        position: relative;
-        top:2px;
-      }
     }
-  }
 }
 
 header {
-  margin-left: 280px;
-  padding: 15px;
-  background: $darkGrey;
-  .search-area {
-    display: inline-block;
-
-    .fa {
-      color: #aaa;
-    }
-
-    input[type="text"] {
-      background: transparent;
-      border: none;
-      font-size: 1.3rem;
-      color: $purpleDark;
-      padding: 5px;
-      font-weight: 100;
-      transition: all .5 ease-in-out;
-      // border-bottom: 1px solid #aaa;
-
-      &:focus {
-        
-      }
-    }
-
-  }
-  .user-area {
-    float: right;
-
-    a {
-      display: inline-block;
-      padding-right: 20px;
-      text-decoration: none;
-      color: $purpleLight;
-      height: 30px;
-      &.notification {
-        position: relative;
-        font-size: 20px;
-        .circle {
-          background: red;
-          width: 12px;
-          height: 12px;
-          border-radius: 50%;
-          display: inline-block;
-          font-size: 11px;
-          color: #fff;
-          text-align:center;
-          position: absolute;
-          top: -5px;
-          left: 5px;
-          z-index: 1;
-        }
-      }
-
-      .user-img {
-        background: url('https://randomuser.me/api/portraits/men/91.jpg') no-repeat center center;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-        width: 30px;
-        height: 30px;
+    margin-left: 280px;
+    padding: 15px;
+    background: #fff;
+    .search-area {
         display: inline-block;
-        border-radius: 50%;
-        margin-right: 10px;
-      }
-
-      .fa-caret-down {
-        position:relative;
-        top:-8px;
-      }
+        .fa {
+            color: #aaa;
+        }
+        input[type="text"] {
+            background: transparent;
+            border: none;
+            font-size: 1.3rem;
+            color: $purpleDark;
+            padding: 5px;
+            font-weight: 100;
+            transition: all .5 ease-in-out;
+            // border-bottom: 1px solid #aaa;
+        }
     }
-  }
+    .user-area {
+        float: right;
+        a {
+            display: inline-block;
+            padding-right: 20px;
+            text-decoration: none;
+            color: $purpleLight;
+            height: 30px;
+            &.notification {
+                position: relative;
+                font-size: 20px;
+                .circle {
+                    background: red;
+                    width: 12px;
+                    height: 12px;
+                    border-radius: 50%;
+                    display: inline-block;
+                    font-size: 11px;
+                    color: #fff;
+                    text-align: center;
+                    position: absolute;
+                    top: -5px;
+                    left: 5px;
+                    z-index: 1;
+                }
+            }
+            .user-img {
+                background: url('https://randomuser.me/api/portraits/men/91.jpg') no-repeat center center;
+                -webkit-background-size: cover;
+                -moz-background-size: cover;
+                -o-background-size: cover;
+                background-size: cover;
+                width: 30px;
+                height: 30px;
+                display: inline-block;
+                border-radius: 50%;
+                margin-right: 10px;
+            }
+            .fa-caret-down {
+                position: relative;
+                top: -8px;
+            }
+        }
+    }
 }
 
 input:focus {
-  outline: none;
-  background: $lightGrey;
+    outline: none;
+    background: $lightGrey;
 }
 
-@import 'content-area';
+@import 'content';
