--- a/assets/sass/_variable.scss
+++ b/assets/sass/_variable.scss
@@ -3,3 +3,19 @@ $purpleDark: #282639;
 $neonGreen: #92CF48;
 $lightGrey: #F4F6F9;
 $darkGrey: #EAEDF3;
+$darkGreyBG: #EAEDF3;
+$darkGreyFont: #6C7882;
+$lightGreyBG: #F4F6F9;
+$lightGreyFont: #B8C1CD;
+$orange: #F48320;
+$purple: #744BCE;
+$white: #ffffff;
+$red: #FF4C4C;
+
+// Grid
+$grid-columns: 12;
+$grid-max-width: 1200px;
+$breakpoint-small: "only screen and (min-width: 0px)";
+$breakpoint-medium: "only screen and (min-width: 700px)";
+$breakpoint-large: "only screen and (mid-width: 1008px)";
+$breakpoint-xl: "only screen and (min-width: 1300px)";
