--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,22 +1,28 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700');
 @import "reset";
 @import "variable";
+@import "grid";
+@import "forms";
+@import "content";
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
     font-family: 'Roboto', sans-serif;
-    background: $lightGrey;
+    background: $darkGrey;
 }
 
 #sideMenu {
     background: $purpleLight;
-    max-width: 280px;
+    max-width: 80px;
     width: 280px;
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+    z-index: 1;
     nav {
         padding-top: 100px;
         a {
@@ -26,6 +32,9 @@ body {
             padding: 15px 30px;
             font-weight: 300;
             transition: all .3s ease-in-out;
+            span {
+                display: none;
+            }
             &:hover {
                 background: $purpleDark;
                 padding: 15px 30px 15px 25px;
@@ -54,30 +63,132 @@ body {
             }
         }
     }
+    // &:hover {
+    //     max-width: 280px;
+    //     transition:opacity 0.28s ease-in-out 0s;
+    //     a {
+    //         span {
+    //             display:inline-block;
+    //         }
+    //     }
+    // }
 }
 
 header {
-    margin-left: 280px;
-    padding: 15px;
-    background: #fff;
-    .search-area {
-        display: inline-block;
-        .fa {
-            color: #aaa;
-        }
-        input[type="text"] {
-            background: transparent;
-            border: none;
-            font-size: 1.3rem;
-            color: $purpleDark;
-            padding: 5px;
-            font-weight: 100;
-            transition: all .5 ease-in-out;
-            // border-bottom: 1px solid #aaa;
-        }
-    }
+    margin-left: 80px;
+    background: $white;
+    // height: 50px;
+    // .user-area {
+    //     text-align: right;
+    //     .search-area {
+    //         display: inline-block;
+    //         .fa {
+    //             color: $lightGreyFont;
+    //         }
+    //         .border {
+    //             height: 2px;
+    //             width: 0px;
+    //             background-color: darkgrey;
+    //             display: inline-block;
+    //             transition: .3s width ease-in-out;
+    //             position: absolute;
+    //             top: 12px;
+    //         }
+    //         input[type="text"] {
+
+    //             background: transparent;
+    //             border: none;
+    //             font-size: 1.1rem;
+    //             color: $purpleDark;
+    //             padding: 5px;
+    //             font-weight: 100;
+    //             border-bottom: 1px solid $lightGreyFont;
+                
+    //             &::placeholder {
+    //                 color: $lightGreyFont;
+    //             }
+    //             &:focus+.border{
+    //                 width: 230px;
+    //                 background-color: $purple;
+    //             }
+    //         }
+    //     }
+    //     a {
+    //         display: inline-block;
+    //         padding-right: 20px;
+    //         text-decoration: none;
+    //         color: $purpleLight;
+    //         height: 30px;
+    //         &.notification {
+    //             position: relative;
+    //             font-size: 20px;
+    //             .circle {
+    //                 background: $red;
+    //                 width: 12px;
+    //                 height: 12px;
+    //                 border-radius: 50%;
+    //                 display: inline-block;
+    //                 font-size: 11px;
+    //                 color: $white;
+    //                 text-align: center;
+    //                 position: absolute;
+    //                 top: -5px;
+    //                 left: 5px;
+    //                 z-index: 1;
+    //             }
+    //         }
+    //         .user-img {
+    //             background: url('https://randomuser.me/api/portraits/men/91.jpg') no-repeat center center;
+    //             -webkit-background-size: cover;
+    //             -moz-background-size: cover;
+    //             -o-background-size: cover;
+    //             background-size: cover;
+    //             width: 30px;
+    //             height: 30px;
+    //             display: inline-block;
+    //             border-radius: 50%;
+    //             margin-right: 10px;
+    //         }
+    //         .fa-caret-down {
+    //             position: relative;
+    //             top: -8px;
+    //         }
+    //     }
+    // }
     .user-area {
         float: right;
+        .search-area {
+            display: inline-block;
+            padding-right: 20px;
+            .fa {
+                color: $lightGreyFont;
+            }
+            .border {
+                height: 2px;
+                width: 0px;
+                position: absolute;
+                background-color: darkgrey;
+                display: inline-block;
+                transition: .3s width ease-in-out;
+                top: 55px;
+            }
+            input[type="text"] {
+                background: transparent;
+                border: none;
+                font-size: 1.3rem;
+                color: $purpleDark;
+                padding: 5px;
+                font-weight: 100;
+                border-bottom: 1px solid $darkGreyFont;
+                &::placeholder {
+                    color: $lightGreyFont;
+                }
+                &:focus+.border{
+                    width: 300px;
+                    background-color: $purple;
+                }
+            }
+        }
         a {
             display: inline-block;
             padding-right: 20px;
@@ -88,13 +199,13 @@ header {
                 position: relative;
                 font-size: 20px;
                 .circle {
-                    background: red;
+                    background: $red;
                     width: 12px;
                     height: 12px;
                     border-radius: 50%;
                     display: inline-block;
                     font-size: 11px;
-                    color: #fff;
+                    color: $white;
                     text-align: center;
                     position: absolute;
                     top: -5px;
@@ -126,5 +237,3 @@ input:focus {
     outline: none;
     background: $lightGrey;
 }
-
-@import 'content';
